--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ rank_bm25>=0.2.2
 nltk>=3.8.1
 transformers>=4.36.2
 litellm>=1.16.11
-numpy>=1.24.3
+numpy>=1.24.3,<2
 scikit-learn>=1.3.2
 openai>=1.3.7
 ollama>=0.1.0
